# cleware-cutter-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md
debian/: changelog  control  copyright
libs/: CMakeLists.txt
libs/CutterCommand/: CMakeLists.txt  CutterCommand.cpp  CutterCommand.h  CutterCommandFactory.cpp  CutterCommandFactory.h  OffCutterCommand.cpp  OffCutterCommand.h  OnCutterCommand.cpp  OnCutterCommand.h  ResetCutterCommand.cpp  ResetCutterCommand.h  ToggleCutterCommand.cpp  ToggleCutterCommand.h
libs/USBaccess/: CMakeLists.txt  USBaccess.cpp  USBaccess.h  USBaccessBasic.c
src/: CMakeLists.txt  main.cpp
util/: 99-cleware.rules  cleware-cutter-control  create_deb.sh  man.md
